Replace deprecated boxed primitive constructors with valueOf()
new Byte/Integer/Short/Double() are deprecated for removal since
JDK 9. Replace with valueOf() which has been available since JDK 5.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>